# ChangeLog for sys-apps/ack
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/ack/ChangeLog,v 1.32 2013/06/18 20:14:36 jer Exp $

  18 Jun 2013; Jeroen Roovers <jer@gentoo.org> ack-2.04.ebuild:
  Marked ~hppa too.

  18 Jun 2013; Tim Harder <radhermit@gentoo.org> ack-1.96.ebuild:
  Drop unused bash-completion use flag.

  18 Jun 2013; Tim Harder <radhermit@gentoo.org> -ack-1.94-r1.ebuild:
  Remove old.

*ack-2.04 (18 Jun 2013)

  18 Jun 2013; Tim Harder <radhermit@gentoo.org> +ack-2.04.ebuild,
  +files/ack-2.04-gentoo.patch, metadata.xml:
  Version bump (bug #466512, Gentoo specific patch by Chris Mayo) and add
  myself as a maintainer.

  21 Jan 2013; Steev Klimaszewski <steev@gentoo.org> ack-1.96.ebuild:
  Add ~arm keyword

  04 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> ack-1.96.ebuild:
  x86 stable wrt bug #395231

  19 Dec 2011; Agostino Sarubbo <ago@gentoo.org> ack-1.96.ebuild:
  Stable for AMD64, wrt bug #395231

  04 Dec 2011; Rajiv Aaron Manglani <rajiv@gentoo.org> -ack-1.92.ebuild:
  cleanup.

  27 Oct 2011; Tony Vroon <chainsaw@gentoo.org> ack-1.94-r1.ebuild:
  Marked stable on AMD64 based on arch testing by Ian "idella4" Delaney &
  Elijah "Armageddon" El Lazkani in bug #384111.

  25 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> ack-1.94-r1.ebuild:
  x86 stable wrt bug #384111

*ack-1.96 (23 Oct 2011)

  23 Oct 2011; Rajiv Aaron Manglani <rajiv@gentoo.org> +ack-1.96.ebuild:
  version bump, #385033.

  23 Oct 2011; Rajiv Aaron Manglani <rajiv@gentoo.org> -ack-1.94.ebuild:
  cleanup.

*ack-1.94-r1 (11 Apr 2011)

  11 Apr 2011; Torsten Veller <tove@gentoo.org> +ack-1.94-r1.ebuild:
  Add support for .ebuild and .eclass as gentoo filetypes.
  Thanks to Henning Schild (#360479)

*ack-1.94 (09 Mar 2011)

  09 Mar 2011; Torsten Veller <tove@gentoo.org> +ack-1.94.ebuild, metadata.xml:
  Version bump (#357947). Add perl to metadata
