@@ -4,15 +4,21 @@ Hash: SHA256
 AUX ack-2.04-gentoo.patch 445 SHA256 0dc3021f1d7f7c08c2eccd7ab34a59a1d1de9b35edaea23fd53fa12b8fe5f96f SHA512 01c46c20ffdd5cc48569b1eaba2194f33c28b6f30db7bee89be0314c77f5cc80eba2359303745034c184efb13ca14556bb0b7f714f435e585ba9ec7da40a5a06 WHIRLPOOL 40c1644a996a522773fbe19a8be68c4d25ff8bb78991306d508d24d94c8a38811dcbc651ae4dddbdaa47a96536b729164c454d6ce2b67fa16f8b468972e2089e
 DIST ack-1.96.tar.gz 111986 SHA256 bb9d29842d8c5c1ec7ad9b577707aca0e1d278e8e21560dbed76ea3b5aa6cb64 SHA512 e0310e0bdbd386184c5057dd5264e9cde68f67202869595528bfcfdcd37ddfa76b19a05418eacc9443df00b64573fb23e259c0305dde9037c72e2bbcb0dd1637 WHIRLPOOL 2bce2011652f7326661f2a02f13fa76085e5fe63da9771bdc8576a5cfc68857bb1273a08f1dd01923be4c4a70e259507ef721a216aea9bf3ebc0dc0859d8efb6
 DIST ack-2.04.tar.gz 209885 SHA256 7c58d72f61eec4e6e57a418f3a63c6735eafad20d6c319279fe33edc41ef9ac4 SHA512 def9bd2cff18f275d02cc6f4da512db22a9fcc2913d6a3e8aab3b302bc170a4c562a4f56d24f094fb91fe8022e89f5386954fce4aaccbc940733e7109cdeebb6 WHIRLPOOL 17b51614ff277101525d571ce86e5bf167e63d23641f97136198014c40a0130f5692196786b5f70d985cf20d89fab0561dd0c70ac509d399701cd7446e4242fe
+DIST ack-2.08.tar.gz 210625 SHA256 458d48d4bcb03fd8866669ab26d56874c24aff39785e8498b50ddb657122b35c SHA512 1cb7e4473838b4679fdbb99f7f52706956fc66aaa7fc51f05bb7f63fcda423226330e050bd0d9b492882b7a1bd1f0a8b2063eb544b872c0002cc2b77bd3cb7e4 WHIRLPOOL 608f7399fa44500d92a269d6aef9845cf06130bd87692b208f90a2e293e55041fe6b73d5e6ebc8639a4af4c5be971bf8bc001958a774fb8302ed72d8ba2dcd95
 DIST ack-gentoo-r1.patch.bz2 325 SHA256 8848e5476fb5e4b0a86944da79207b6db20b2ade85cf4add418dcf777c428fc3 SHA512 7a1c69d07c283ea7524c5ca2bf91bb6183d44978673c2bd9a579d0f4b35de4d120134a0281c3bea4d44cd442186ceccdc1e30f9adbcca4ee097f5b43140f88a5 WHIRLPOOL ab8ab971b73e622d9a7df7437e9e9aa6561e6a3139586a423144fd9e641ed61001f3446adac0320317b647e7bcdd003e73b5b0a20a2d8c7626f99b97082efa42
 EBUILD ack-1.96.ebuild 867 SHA256 9fbc784cddb81ff1c45900e9c25e69e6fe76a2ed784e7b8a5339fc46d8a4c0be SHA512 3824b810c6c196ebcfd64d2ab2756b3f04860a493f831d950839622ac668ad0eec713afbbf828eb15fb3e3ae4b24e88860a5e13d2ea83b4dd734e20763808c81 WHIRLPOOL 39f250fa816b698911795177a6b8a2892178bcd7ab5faafd7de8867d4f7e256fd96aad509f5c35fc20a08657736c8f09053cf7793cddb1cecca9b999a24b488d
 EBUILD ack-2.04.ebuild 909 SHA256 b4f18673422893bd4e10a195fbaa37b67a73ad2540cbea126a0997963443d0d3 SHA512 4c79e14d0e75c527f308c71bdfec9f6907ddb17cbe27658e763716d131594768838ea864d23a94c0068bd8e4a434f27cb98dfd7423ec6845f4dfc684e318e13b WHIRLPOOL 5b016a200e60a4bd7356fe47e3d6e1af09860912d242bada8553e4dc71c12dcaec265bdb4829b36db4cd25dd76cb9c8d31f41248c9033e9eda642fcf4ac219fc
-MISC ChangeLog 3960 SHA256 9b13ba0aadc4b0ac9bf14128417c114f908a94a1b38a41a595b6556e87b1b0e8 SHA512 9d45c535a6acd98ad4f17f7c0a2f9b00b2ece707fd2bde969db540f42ee96e0edc575aabfd6b0bfb2ee14cd99bb3e41497d672cec98c210ad1ab0e3c63ecc8b7 WHIRLPOOL 0cdf4c8fe72ea78cf7762556ebb5f39bf5ac052e6bf612ff00e2c0a8353ebeee6840d2b2309ee6bb208d0563aa3ccb53b3c533f0b2acb767a138597588e3cfaa
+EBUILD ack-2.08.ebuild 921 SHA256 632925ee339a4df33da5e4a0832011fb553e17a010071b1703bdaf14a26d019e SHA512 88fc1689191dd44963cbeec34297251514656fc14bb749c455a66deba86a0958a13ce52402a5e8477f1906c7c337526c575e8fe82280325c64c24c8aeb8f06d1 WHIRLPOOL 76b1fe827b96bd2e04f44c7d5b17e58c3acb54d06c9d051e636a50982601058aab9b18a140ce3ff7fa4d65e9c3f132c931f7a841e553cdc73e066449fd10862b
+MISC ChangeLog 4075 SHA256 3a27df4e03892ed1a183f329365050c3694622ffec487d9bd9664085c6eb528c SHA512 0f740177dead418614ce82e0e728f4f5a31c5209c5b8d26b614c318eeea760a89b3e9a1b15089b71c945d21193f7cf286eed3da434b218b1cf985711c70bca3f WHIRLPOOL 303c7085f97f5897c29d700fbc54b0ba5248a7bc4156c6e36de9cb6fe4b852c523c38f9c747ce9f62e525f489410cd122263ece778e3eb7a83e7395ef9a5e4af
 MISC metadata.xml 416 SHA256 c49eb3391919c89577e689dd6b0da4d84fc6e387d6db5ba902a1d51655a5779a SHA512 0fea1128674a031b9a6f7b2ae33e6d95217ada1b3393a8f87dd3c5237c223f93589bedce3727e796e227131658b4277528a372735c3f66121428ffa43aaa00a3 WHIRLPOOL 1ef42bc1808ddecfdb08a0db99a58771e0d629c12eab2b71978df27d3d91a36d69388cd6eef050eaf159fd41933161d16e770b4b92bdba5165c450f8f98d768c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.21 (GNU/Linux)
 
-iEYEAREIAAYFAlHAv60ACgkQVWmRsqeSphPXnACfcLFHI6Av5RrYEwG9fliBf8Ju
-IZIAmwXzqnV2m0wPZRwE44JItUxxbvIO
-=h7V6
+iQEcBAEBCAAGBQJSGZlnAAoJEEqz6FtPBkyjHzYH/0HvBeT8X3VKDvpW/iJYA8X/
+wvGD3G0qkt8uCe2KFJ/pZILE9TeW16+M49+wYD9Dqgub4V+eiQwzyl5twsiFwphG
+kGoYt71apMR2y1CPEQlSVsWoZVKYykk0EwM/AnRR98ULbR0bcfTVGETVZiMXytAj
+Tt4D2yR42utoUOEUb0Iq6Q8aEonr9ooufkR+JUv4E3W01ilEOV32cG+CxuzT3hpY
+OiPuypHlz/eDmIRpT/lXbyQNh2IsGOHjLrjePoxMB8c2pJN1kM4bkwNIhS5PHayD
+tKMq37tB4pCp9q9lbllH6/OOhIhXeaK941YAwmVZCTZ+nYnNVl0cmBgF4NKm0UQ=
+=fiZg
 -----END PGP SIGNATURE-----
