@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/ack
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/ack/ChangeLog,v 1.32 2013/06/18 20:14:36 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/ack/ChangeLog,v 1.33 2013/08/25 05:42:59 radhermit Exp $
+
+*ack-2.08 (25 Aug 2013)
+
+  25 Aug 2013; Tim Harder <radhermit@gentoo.org> +ack-2.08.ebuild:
+  Version bump.
 
   18 Jun 2013; Jeroen Roovers <jer@gentoo.org> ack-2.04.ebuild:
   Marked ~hppa too.
